# rasterm

./: CMakeLists.txt  main.c  matrix.c  matrix.h  mesh.c  mesh.h  mesh_gltf.c  mesh_obj.c  model.c  model.h  model_gltf.c  model_obj.c  path.c  path.h  render.c  render.h  term.h  term_posix.c  term_win32.c  vertex.h
models/cube/: cube.vox
